--- a/TicketMvp/.classpath
+++ b/TicketMvp/.classpath
@@ -26,6 +26,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/downloads/lombok/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ICT03-01/Downloads/sts-bundle/sts-3.9.14.RELEASE/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
