--- a/TicketMvp/.classpath
+++ b/TicketMvp/.classpath
@@ -34,7 +34,7 @@
 	<classpathentry kind="lib" path="C:/Users/ICT03-01/Downloads/payment-widget-sample-main/jsp/WEB-INF/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
