--- a/TicketMvp/.classpath
+++ b/TicketMvp/.classpath
@@ -32,11 +32,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="C:/Users/ict0326/Downloads/jar/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ict0326/Downloads/jar/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/worksqace/workspace_ticketmvp/jar/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/worksqace/workspace_ticketmvp/jar/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
